Fixed text overflow for plugin output in edit_service and host

--- a/adagios/media/css/style.css
+++ b/adagios/media/css/style.css
@@ -211,3 +211,7 @@ div#loading {
 [class^="toolbar_"] div div {
     padding-right: 16px;
 }
+
+div#top_status_output {
+    overflow: hidden;
+}
